--- a/src/ui/controls/play/play.scss
+++ b/src/ui/controls/play/play.scss
@@ -6,7 +6,6 @@
   display: flex;
 
   box-sizing: border-box;
-  //width: 20px;
   height: 15px;
   margin-right: 20px;
   padding: 0 20px;
@@ -15,10 +14,18 @@
 
   align-items: center;
   justify-content: center;
-}
 
-.play-icon,
-.pause-icon {
-  width: 13.5px;
-  height: 16px;
+  .playback-toggle {
+    width: 13.5px;
+    min-width: 13.5px;
+    height: 16px;
+    min-height: 16px;
+
+    background-image: url('./svg/pause-icon.svg');
+    background-size: 13.5px 16px;
+
+    &.paused {
+      background-image: url('./svg/play-icon.svg');
+    }
+  }
 }
