--- a/src/ui/screen/screen.scss
+++ b/src/ui/screen/screen.scss
@@ -38,7 +38,7 @@
     width: 60px;
     height: 60px;
 
-    opacity: 1;
+    opacity: .5;
     background-size: 60px 60px;
   }
 
@@ -56,7 +56,7 @@
     width: 60px;
     height: 60px;
 
-    opacity: 1;
+    opacity: .5;
     background-size: 60px 60px;
   }
 
