--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -24,7 +24,7 @@
     height: 71px;
 
     opacity: 1;
-    background-image: url('./svg/play-icon.svg');
+    background-image: url('../../assets/overlay/play-icon.svg');
     background-size: 100%;
 
     &:hover {
