--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -10,6 +10,10 @@
 
   .inner-wrapper {
     position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 
     display: flex;
     overflow: hidden;
