--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -8,6 +8,14 @@
 
   height: inherit;
 
+  :focus {
+    outline: none;
+  }
+
+  ::-moz-focus-inner {
+    border: 0;
+  }
+
   .inner-wrapper {
     position: absolute;
     top: 0;
