--- a/src/ui/shared.scss
+++ b/src/ui/shared.scss
@@ -3,41 +3,19 @@ $color-hover: #4eb7f5 !default;
 $video-progress-bg: transparentize(#fff, .75) !default;
 $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-45Ligh,Helvetica Neue,Helvetica,Arial,\\30E1\30A4\30EA\30AA,meiryo,\\30D2\30E9\30AE\30CE\89D2\30B4 pro w3,hiragino kaku gothic pro;
 
-@mixin range-track() {
-  cursor: pointer;
-  user-select: none;
-
-  border: 0;
-  border-radius: 4px;
-}
-
-@mixin range-thumb() {
-  position: relative;
-
-  box-sizing: border-box;
-  width: 15px;
-  height: 15px;
-
-  cursor: pointer;
-
-  border: none;
-  border-radius: 100%;
-  background: #fff;
-}
-
 .icon {
   cursor: pointer;
   transition-duration: .2s;
   transition-property: opacity;
 
-  opacity: .8;
+  opacity: 1;
 
   &:hover {
-    opacity: 1;
+    opacity: .7;
   }
 }
 
-.hidden {
+@mixin hidden() {
   visibility: hidden !important;
 
   width: 0 !important;
@@ -46,6 +24,10 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
   padding: 0 !important;
 
   opacity: 0 !important;
+}
+
+.hidden {
+  @include hidden();
 }
 
 .button {
@@ -63,8 +45,7 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
   transition: background-color .1s linear,border-color .1s linear,color .1s linear;
   text-align: center;
 
-  color: white;
-  color: #fff;
+  color: $color-main;
   border: 1px solid $color-main;
   border-radius: 18px;
   outline: none;
@@ -82,83 +63,4 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
     border-color: $color-main;
     background-color: $color-main;
   }
-}
-
-.range-control {
-  display: block;
-
-  width: 100%;
-  height: 15px;
-  margin: 0;
-  padding: 0;
-
-  cursor: pointer;
-  vertical-align: middle;
-
-  border: none;
-  background: transparent;
-
-  appearance: none;
-
-  &::-webkit-slider-runnable-track {
-    @include range-track();
-  }
-  &::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    @include range-thumb();
-  }
-
-  &::-moz-range-track {
-    @include range-track();
-  }
-  &::-moz-range-thumb {
-    @include range-thumb();
-  }
-
-  &::-ms-track {
-    height: 3px;
-
-    color: transparent;
-    border: 0;
-    background: transparent;
-  }
-  &::-ms-fill-upper {
-    @include range-track();
-  }
-  &::-ms-fill-lower {
-    height: 3px;
-
-    color: $color-main;
-    background: $color-main;
-
-    @include range-track();
-  }
-  &.volume-input::-ms-fill-lower {
-    height: 3px;
-
-    background: white;
-
-    @include range-track();
-  }
-  &::-ms-thumb {
-    // For some reason, Edge uses the -webkit margin above
-    margin-top: -1px;
-
-    @include range-thumb();
-  }
-  &::-ms-tooltip {
-    display: none;
-  }
-
-  &:focus {
-    outline: 0;
-  }
-  &::-moz-focus-outer {
-    border: 0;
-  }
-}
-
-.fullscreen {
-  width: 100%!important;
-  height: 100%!important;
 }
