--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -47,4 +47,13 @@
 
     outline: none;
   }
+
+  .full-screen-control {
+    display: none;
+  }
+}
+
+.full-screen {
+  width: 100%!important;
+  height: 100%!important;
 }
