--- a/src/ui/controls/progress/progress.scss
+++ b/src/ui/controls/progress/progress.scss
@@ -22,7 +22,7 @@
     position: relative;
     z-index: 2;
 
-    height: 25px;
+    height: 15px;
 
     &::-webkit-slider-runnable-track {
       background: transparent;
@@ -43,8 +43,8 @@
   left: 0;
 
   width: 100%;
-  height: 3px;
-  margin: -1.5px 0 0;
+  height: 2px;
+  margin: -1px 0 0;
   padding: 0;
 
   vertical-align: top;
@@ -107,6 +107,7 @@
     display: none;
   }
 }
+
 .progress-buffered {
   &::-webkit-progress-value {
     transition: width .2s ease;
@@ -122,6 +123,7 @@
 .progress-buffered {
   background: $video-progress-bg;
 }
+
 .progress-buffered {
   color: $video-progress-bg;
 }
@@ -134,12 +136,12 @@
   border-radius: 4px;
 }
 
-@mixin seek-track() {
+@mixin seek-thumb() {
   position: relative;
 
   box-sizing: border-box;
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
 
   cursor: pointer;
 
@@ -169,14 +171,14 @@
   }
   &::-webkit-slider-thumb {
     -webkit-appearance: none;
-    @include seek-track();
+    @include seek-thumb();
   }
 
   &::-moz-range-track {
     @include seek-track();
   }
   &::-moz-range-thumb {
-    @include seek-track();
+    @include seek-thumb();
   }
 
   &::-ms-track {
@@ -197,18 +199,11 @@
 
     @include seek-track();
   }
-  &.volume-input::-ms-fill-lower {
-    height: 3px;
-
-    background: white;
-
-    @include seek-track();
-  }
   &::-ms-thumb {
     // For some reason, Edge uses the -webkit margin above
     margin-top: -1px;
 
-    @include seek-track();
+    @include seek-thumb();
   }
   &::-ms-tooltip {
     display: none;
