--- a/src/ui/controls/controls.scss
+++ b/src/ui/controls/controls.scss
@@ -26,13 +26,13 @@
 
     visibility: hidden;
 
-    height: 130px;
+    height: 182px;
 
     transition: opacity .2s, visibility .2s;
 
     opacity: 0;
-    background: linear-gradient(180deg,transparent,rgba(0,0,0,.6)) no-repeat bottom;
-    background-size: 100% 130px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(91, 88, 88, .03) 16%, rgba(43, 41, 41, .09) 39%, rgba(0, 0, 0, .15) 67%, rgba(0, 0, 0, .3));
+    background-size: 100% 182px;
   }
 
   .controls {
@@ -47,8 +47,9 @@
 
     width: 100%;
     max-width: 100%;
-    height: 50px;
-    margin-bottom: 5px;
+    height: 25px;
+    margin-bottom: 13px;
+    padding-top: 10px;
 
     transition: opacity .2s, visibility .2s;
 
@@ -56,7 +57,6 @@
 
     align-items: center;
   }
-
 
   &.activated,
   &.video-paused {
@@ -72,4 +72,13 @@
       opacity: 1;
     }
   }
+}
+
+
+@include in-full-screen('.controls-wrapper .controls') {
+  margin-bottom: 25px;
+}
+
+@include max-width-550('.controls-wrapper .controls') {
+  margin-bottom: 7px;
 }
