--- a/src/ui/controls/progress/progress.scss
+++ b/src/ui/controls/progress/progress.scss
@@ -14,7 +14,7 @@
   display: inline-block;
   flex: 1;
 
-  margin-right: 20px;
+  margin-right: 18px;
 
   cursor: pointer;
 
@@ -34,6 +34,14 @@
       background: transparent;
     }
   }
+}
+
+@include in-full-screen('.progress-bar') {
+  margin-right: 30px;
+}
+
+@include max-width-400('.progress-bar') {
+  @include hidden();
 }
 
 .progress-played,
@@ -121,11 +129,8 @@
 }
 
 .progress-buffered {
-  background: $video-progress-bg;
-}
-
-.progress-buffered {
   color: $video-progress-bg;
+  background: $video-progress-bg;
 }
 
 @mixin seek-track() {
