--- a/src/ui/controls/volume/volume.scss
+++ b/src/ui/controls/volume/volume.scss
@@ -15,6 +15,14 @@ $color: white !default;
 
   justify-content: center;
   align-items: center;
+  @include in-full-screen() {
+    width: 25px;
+    max-width: 25px;
+    margin-right: 30px;
+  }
+  @include max-width-300() {
+    @include hidden();
+  }
 
   &:hover {
     .container {
@@ -29,15 +37,6 @@ $color: white !default;
   }
 }
 
-@include in-full-screen('.volume-control') {
-  width: 25px;
-  max-width: 25px;
-  margin-right: 30px;
-}
-
-@include max-width-300('.volume-control') {
-  @include hidden();
-}
 
 .mute-button {
   width: 18px;
@@ -48,6 +47,15 @@ $color: white !default;
   background-image: url('../../../assets/volume/volume-100.svg');
   background-size: 18px 14px;
 
+  @include in-full-screen() {
+    width: 25px;
+    min-width: 25px;
+    height: 21px;
+    min-height: 21px;
+
+    background-size: 25px 21px;
+  }
+
   &.half-volume {
     background-image: url('../../../assets/volume/volume-50.svg');
   }
@@ -56,16 +64,6 @@ $color: white !default;
     background-image: url('../../../assets/volume/volume-0.svg');
   }
 }
-
-@include in-full-screen('.mute-button') {
-  width: 25px;
-  min-width: 25px;
-  height: 21px;
-  min-height: 21px;
-
-  background-size: 25px 21px;
-}
-
 
 .container {
   font-size: 10px;
@@ -82,11 +80,11 @@ $color: white !default;
 
   opacity: 0;
   background-color: rgba(0,0,0, .5);
-}
 
-@include in-full-screen('.container') {
-  top: -122px;
-  left: -3px;
+  @include in-full-screen() {
+    top: -122px;
+    left: -3px;
+  }
 }
 
 .content {
@@ -96,12 +94,12 @@ $color: white !default;
   width: 2px;
   height: 60px;
   padding: 2px 7px;
-}
 
-@include in-full-screen('.content') {
-  width: 2px;
-  height: 100px;
-  padding: 2px 12px;
+  @include in-full-screen() {
+    width: 2px;
+    height: 100px;
+    padding: 2px 12px;
+  }
 }
 
 .input-wrapper {
