--- a/src/ui/media-query-mixins.scss
+++ b/src/ui/media-query-mixins.scss
@@ -1,29 +1,35 @@
-@mixin in-full-screen($className) {
-  div[data-hook='player-container'][data-in-full-screen] #{$className} {
-    @content;
+@mixin query-basic($query, $value) {
+  div[data-hook='player-container'][#{$query}~=#{'"' + $value + '"'}] & {
+    @content
   }
 }
 
-@mixin max-width-550($className) {
-  div[data-hook='player-container'][max-width~='550px'] #{$className} {
-    @content;
+@mixin in-full-screen() {
+  @include query-basic(data-in-full-screen, true) {
+    @content
   }
 }
 
-@mixin max-width-400($className) {
-  div[data-hook='player-container'][max-width~='400px'] #{$className} {
-    @content;
+@mixin max-width-550() {
+  @include query-basic(max-width, 550px) {
+    @content
   }
 }
 
-@mixin max-width-350($className) {
-  div[data-hook='player-container'][max-width~='350px'] #{$className} {
-    @content;
+@mixin max-width-400() {
+  @include query-basic(max-width, 400px) {
+    @content
   }
 }
 
-@mixin max-width-300($className) {
-  div[data-hook='player-container'][max-width~='300px'] #{$className} {
-    @content;
+@mixin max-width-350() {
+  @include query-basic(max-width, 350px) {
+    @content
+  }
+}
+
+@mixin max-width-300() {
+  @include query-basic(max-width, 300px) {
+    @content
   }
 }
