Hide time indicator for width < 300px

--- a/src/ui/controls/time/time.scss
+++ b/src/ui/controls/time/time.scss
@@ -11,6 +11,9 @@
   @include in-full-screen() {
     margin-right: 30px;
   }
+  @include max-width-300() {
+    @include hidden();
+  }
 }
 
 .time {
