--- a/src/ui/controls/play/play.scss
+++ b/src/ui/controls/play/play.scss
@@ -6,13 +6,15 @@
   display: flex;
 
   box-sizing: border-box;
+  width: 11px;
   height: 15px;
   margin-right: 18px;
   margin-left: 18px;
 
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   @include in-full-screen() {
+    width: 16px;
     height: 21px;
     margin-right: 30px;
     margin-left: 30px;
@@ -23,24 +25,35 @@
 }
 
 .playback-toggle {
-  width: 15px;
-  min-width: 15px;
+  width: 10px;
+  min-width: 10px;
   height: 14px;
   min-height: 14px;
 
   background-image: url('../../../assets/play/pause-icon.svg');
-  background-size: 15px 14px;
+  background-size: 10px 14px;
 
   @include in-full-screen() {
-    width: 16px;
-    min-width: 16px;
+    width: 15px;
+    min-width: 15px;
     height: 21px;
     min-height: 21px;
 
-    background-size: 16px 21px;
+    background-size: 15px 21px;
+
+    &.paused {
+      width: 16px;
+      min-width: 16px;
+
+      background-size: 16px 21px;
+    }
   }
 
   &.paused {
+    width: 11px;
+    min-width: 11px;
+
     background-image: url('../../../assets/play/play-icon.svg');
+    background-size: 11px 14px;
   }
 }
