--- a/src/ui/controls/volume/volume.scss
+++ b/src/ui/controls/volume/volume.scss
@@ -13,11 +13,12 @@ $color: white !default;
   height: 25px;
   margin-right: 18px;
 
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   @include in-full-screen() {
     width: 25px;
     max-width: 25px;
+    height: 35px;
     margin-right: 30px;
   }
   @include max-width-300() {
@@ -39,13 +40,13 @@ $color: white !default;
 
 
 .mute-button {
-  width: 18px;
-  min-width: 18px;
+  width: 17px;
+  min-width: 17px;
   height: 14px;
   min-height: 14px;
 
   background-image: url('../../../assets/volume/volume-100.svg');
-  background-size: 18px 14px;
+  background-size: 17px 14px;
 
   @include in-full-screen() {
     width: 25px;
@@ -70,7 +71,7 @@ $color: white !default;
 
   position: absolute;
   top: -82px;
-  left: -2px;
+  left: -5px;
 
   visibility: hidden;
 
@@ -83,7 +84,7 @@ $color: white !default;
 
   @include in-full-screen() {
     top: -122px;
-    left: -3px;
+    left: -7px;
   }
 }
 
