Various fixes for styles

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -42,11 +42,12 @@
       height: 428
     },
     src: [
-      'http://www.streambox.fr/playlists/x36xhzz/x36xhzz.m3u8'
+      {
+      	url: 'https://vod-meta.wix.com/secure-files/eee8630aa5274e66813172fbeb2a742c?secure_data=c2F2ZV9hc19uYW1lPVdhbmRlcmx1c3Qmbm9uY2U9NDkxNzZiZjNhNGY1JmV4cGlyYXRpb25fdHM9MTQ5NzcyMzkzNSZmaWxlX3VybD0vYWVjYTA2MmMtZjUzNC00OTFmLWJjN2QtNTRmZjNlNWE5ZDE4L3ZpZGVvL2VlZTg2MzBhYTUyNzRlNjY4MTMxNzJmYmViMmE3NDJjL2Rhc2gvY2xpcC9maWxlLm1wZCZidWNrZXQ9dmlkZW8ud2l4c3RhdGljLmNvbQ==&secure_sig=d1d3c02d6795fc05ccf9712d4b4d5a5320e910f8',
+        type: 'DASH'
+      }
     ],
-    overlay: {
-      poster: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hubble_Peers_into_the_Storm_%2829563971405%29.jpg/1024px-Hubble_Peers_into_the_Storm_%2829563971405%29.jpg'
-    },
+    overlay: true,
     screen: {
       indicateScreenClick: true
     }
