Various fixes and refactoring

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -43,11 +43,13 @@
     },
     src: [
       {
-      	url: 'https://vod-meta.wix.com/secure-files/eee8630aa5274e66813172fbeb2a742c?secure_data=c2F2ZV9hc19uYW1lPVdhbmRlcmx1c3Qmbm9uY2U9NDkxNzZiZjNhNGY1JmV4cGlyYXRpb25fdHM9MTQ5NzcyMzkzNSZmaWxlX3VybD0vYWVjYTA2MmMtZjUzNC00OTFmLWJjN2QtNTRmZjNlNWE5ZDE4L3ZpZGVvL2VlZTg2MzBhYTUyNzRlNjY4MTMxNzJmYmViMmE3NDJjL2Rhc2gvY2xpcC9maWxlLm1wZCZidWNrZXQ9dmlkZW8ud2l4c3RhdGljLmNvbQ==&secure_sig=d1d3c02d6795fc05ccf9712d4b4d5a5320e910f8',
+      	url: 'https://vod-meta.wix.com/secure-files/713d3001ea8342e79b90a9b8046dac3d?secure_data=c2F2ZV9hc19uYW1lPUdyZWF0JTIwQW1lcmljYW4lMjBSb2FkdHJpcCZub25jZT1jYzM0NjQ0ZWQ1ODImZXhwaXJhdGlvbl90cz0xNDk3NzI3Nzk2JmZpbGVfdXJsPS9hZWNhMDYyYy1mNTM0LTQ5MWYtYmM3ZC01NGZmM2U1YTlkMTgvdmlkZW8vNzEzZDMwMDFlYTgzNDJlNzliOTBhOWI4MDQ2ZGFjM2QvZGFzaC9jbGlwL2ZpbGUubXBkJmJ1Y2tldD12aWRlby53aXhzdGF0aWMuY29t&secure_sig=36c2392dfc8154dd1c9f47475c99f71a4e65c0e9',
         type: 'DASH'
       }
     ],
-    overlay: true,
+    overlay: {
+    	poster: '//images-vod.wixmp.com/aeca062c-f534-491f-bc7d-54ff3e5a9d18/images/e12e73a79c824e1b88db52411886e62b~mv2/v1/fill/w_768,h_431,q_100,usm_0.66_1.00_0.01/file.jpg'
+    },
     screen: {
       indicateScreenClick: true
     }
