--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -14,7 +14,7 @@
   height: 100%;
 
   background: black no-repeat center;
-  background-size: contain;
+  background-size: cover;
 
   justify-content: center;
   align-items: center;
