--- a/src/ui/shared.scss
+++ b/src/ui/shared.scss
@@ -1,9 +1,11 @@
 @import './media-query-mixins';
 
+//Remove comment to enable tooltips;
+//@import './tooltips';
+
 $color-main: white !default;
 $color-hover: #4eb7f5 !default;
 $video-progress-bg: transparentize(#fff, .75) !default;
-$font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-45Ligh,Helvetica Neue,Helvetica,Arial,\\30E1\30A4\30EA\30AA,meiryo,\\30D2\30E9\30AE\30CE\89D2\30B4 pro w3,hiragino kaku gothic pro;
 
 .icon {
   cursor: pointer;
@@ -33,7 +35,6 @@ $font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-4
 }
 
 .button {
-  font-family: $font-family;
   font-size: 16px;
   line-height: 24px;
 
