--- a/src/ui/ui.scss
+++ b/src/ui/ui.scss
@@ -1,5 +1,7 @@
 @import 'shared';
 
+$font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-45Ligh,Helvetica Neue,Helvetica,Arial,\\30E1\30A4\30EA\30AA,meiryo,\\30D2\30E9\30AE\30CE\89D2\30B4 pro w3,hiragino kaku gothic pro;
+
 .video-wrapper {
   font-family: $font-family;
   line-height: 0;
@@ -24,7 +26,6 @@
     left: 0;
 
     display: flex;
-    overflow: hidden;
 
     width: 100%;
     height: 100%;
