Add basic debug info

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -35,18 +35,18 @@
     autoplay: false,
     muted: false,
     loop: false,
-    preload: "metadata",
+    logger: true,
+    preload: "none",
     volume: 0.5,
     size: {
       width: 760,
       height: 428
     },
     src: [
-      'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4'
+      'https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4',
+      'https://clips.vorwaerts-gmbh.de/big_buck_bunny.webm',
     ],
-    overlay: {
-    	poster: '//images-vod.wixmp.com/aeca062c-f534-491f-bc7d-54ff3e5a9d18/images/e12e73a79c824e1b88db52411886e62b~mv2/v1/fill/w_768,h_431,q_100,usm_0.66_1.00_0.01/file.jpg'
-    },
+    overlay: false,
     screen: {
       indicateScreenClick: true
     }
