Initial implementation of IoC container

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -31,7 +31,7 @@
   </div>
 </div>
 <script>
-  var player = new VideoPlayer.Player({
+  var player = VideoPlayer.create({
     autoplay: false,
     muted: false,
     loop: false,
