Adding UI components to IoC container

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -16,6 +16,9 @@
       justify-content: center;
       align-items: center;
     }
+    #player {
+      position: relative;
+    }
   </style>
   <% if (debug) { %>
   <script src="<%= staticsBaseUrl %>video-player.bundle.js"></script>
