Adding Watch On Site feature

--- a/server/index.ejs
+++ b/server/index.ejs
@@ -49,6 +49,13 @@
     src: [
       'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8',
     ],
+    controls: {
+      watchOnSite: {
+        url: 'http://www.wix.com/',
+        showAlways: true,
+        logo: 'https://www.file-extensions.org/imgs/app-icon/128/10395/wix-icon.png'
+      }
+    },
     overlay: false,
   });
   document.getElementById('player').appendChild(player.node);
