--- a/src/ui/controls/controls.scss
+++ b/src/ui/controls/controls.scss
@@ -15,7 +15,13 @@
 .controls-wrapper {
   z-index: 50;
 
+  display: flex;
+
+  width: 100%;
+
   outline: none;
+
+  align-items: center;
 
   &.activated,
   &.video-paused {
@@ -52,7 +58,7 @@
 }
 
 .controls {
-  position: absolute;
+  position: relative;
   z-index: 3;
   right: 0;
   bottom: 0;
@@ -60,12 +66,13 @@
 
   display: flex;
   visibility: hidden;
+  flex: 1;
 
   width: 100%;
   max-width: 100%;
   height: 25px;
   margin-bottom: 13px;
-  padding-top: 10px;
+  padding-top: 13px;
 
   transition: opacity .2s, visibility .2s;
 
@@ -74,8 +81,10 @@
   align-items: center;
   @include in-full-screen() {
     margin-bottom: 25px;
+    padding-top: 25px;
   }
   @include max-width-550() {
     margin-bottom: 7px;
+    padding-top: 7px;
   }
 }
