--- a/src/ui/screen/screen.scss
+++ b/src/ui/screen/screen.scss
@@ -1,6 +1,6 @@
 .icon-container {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   right: 0;
   bottom: 0;
@@ -112,4 +112,39 @@
 
   width: 100%;
   height: 100%;
+}
+
+.top-gradient-background,
+.bottom-gradient-background {
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  left: 0;
+
+  visibility: hidden;
+
+  height: 182px;
+
+  transition: opacity .2s, visibility .2s;
+
+  opacity: 0;
+  background-size: 100% 182px;
+
+  &.visible {
+    visibility: visible;
+
+    opacity: 1;
+  }
+}
+
+.top-gradient-background {
+  top: 0;
+
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(91, 88, 88, .03) 16%, rgba(43, 41, 41, .09) 39%, rgba(0, 0, 0, .15) 67%, rgba(0, 0, 0, .3));
+}
+
+.bottom-gradient-background {
+  bottom: 0;
+
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(91, 88, 88, .03) 16%, rgba(43, 41, 41, .09) 39%, rgba(0, 0, 0, .15) 67%, rgba(0, 0, 0, .3));
 }
