--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -28,6 +28,15 @@
   background-image: url('../../assets/overlay/play-icon.svg');
   background-size: 100%;
 
+  @include max-width-550() {
+    width: 54px;
+    height: 54px;
+  }
+  @include max-width-400() {
+    width: 36px;
+    height: 36px;
+  }
+
   &:hover {
     opacity: .8;
   }
