--- a/src/ui/overlay/overlay.scss
+++ b/src/ui/overlay/overlay.scss
@@ -10,6 +10,17 @@
 
   display: flex;
 
+  justify-content: center;
+  align-items: center;
+}
+
+.poster {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
   width: 100%;
   height: 100%;
 
@@ -20,7 +31,22 @@
   align-items: center;
 }
 
+.poster:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  content: '';
+
+  background-color: rgba(0, 0, 0, .35);
+}
+
 .icon {
+  position: relative;
+
   width: 71px;
   height: 71px;
 
